syntax = "proto3";

import "google/protobuf/empty.proto";

package compiler;

service CompilerApi {
  rpc Build(BuildRequest) returns (stream StageEvent);
}

message File {
  string path = 1;
  bytes data = 2;
}

message BuildRequest {
  string qpc_config = 1;
  optional string target = 2;
  optional bool check_only = 3;
  repeated File files = 4;
}

message StageEvent {
  oneof kind {
    CheckStart check_start = 1;
    CheckEnd check_end = 2;
    EmitStart emit_start = 3;
    EmitEnd emit_end = 4;
    BuildStart build_start = 5;
    BuildEnd build_end = 6;
    string message = 7;
  }
}

message CheckStart {}

message CheckEnd {
  bool ok = 1;
  optional string message = 2;
}

message EmitStart {}

message EmitEnd {
  bool ok = 1;
  optional string message = 2;
  repeated File files = 3;
}

message BuildStart {}

message BuildEnd {
  bool ok = 1;
  optional string message = 2;
  optional File wheel = 3;
}
